# ImageStript

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  index.html  lingui.config.ts  package-lock.json  package.json  pubspec.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
android/app/: build.gradle.kts
docs/plans/: 2026-05-12-ai-metadata-scrub.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: stript_app.dart
lib/app/screens/: batch_screen.dart  home_screen.dart
lib/app/services/: processing_service.dart
lib/app/widgets/: drop_zone.dart  image_preview.dart  metadata_report_card.dart  parameter_sliders.dart
lib/core/: metadata_inspector.dart  metadata_stripper.dart  noise_injector.dart  presets.dart  reencoder.dart  resize_perturbator.dart  stript_engine.dart
lib/desktop/: window_manager.dart
lib/mobile/: photo_picker.dart  share_receiver.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
scripts/: build_all.sh
src/: i18n.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/engine/: inspector.rs  mod.rs  pipeline.rs  presets.rs
test/: widget_test.dart
test/core/: metadata_inspector_test.dart  metadata_stripper_test.dart  noise_injector_test.dart  reencoder_test.dart  resize_perturbator_test.dart  stript_engine_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+16 files in other folders)
