[package]
name = "stript"
version = "1.0.0"
description = "Image AI metadata cleaner and perturbation tool"
authors = ["you"]
edition = "2021"

[lib]
name = "stript_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
regex = "1"
flate2 = "1"
rand = "0.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
